# AI5L_AILab_FraudDetection

./: .gitignore  BinaryClassification.ipynb  DataCleaning.ipynb  DataCleaningScript.py  DataCleaning_old.ipynb  EvaluationFeatures.ipynb  EvaluationMetric.ipynb  EvaluationMetric.py  FirstModel.py  FirstModels.ipynb  README.md  RandomForestBestResult.csv  Sandbox.ipynb  SecondModels.ipynb  TestEverything.ipynb  Untitled.ipynb  Utils.py  evaluationmetric.csv  featuring.ipynb  main.ipynb  pipeline.ipynb  pyproject.toml  report.ipynb  resultsfile24.csv  resultsfile4.csv  scenarios.ipynb
.ipynb_checkpoints/: BinaryClassification-checkpoint.ipynb  DataCleaning-checkpoint.ipynb  EvaluationFeatures-checkpoint.ipynb  EvaluationMetric-checkpoint.ipynb  FirstModels-Copy1-checkpoint.ipynb  FirstModels-checkpoint.ipynb  SecondModels-checkpoint.ipynb  main-checkpoint.ipynb  scenarios-checkpoint.ipynb
output/: Decision Trees_2023-04-30_22-39-24.csv  Gradient Boosting_2023-04-30_22-40-41.csv  LogisticRegression UpSample set complet.csv  LogisticRegression UpSample.csv  LogisticRegression undersampled.csv  Random Forests_2023-04-30_22-39-41.csv  Random Forests_2023-05-01_20-59-34.csv  RandomForestClassifier UpSample.csv  RandomForestClassifier undersampled.csv  RandomForestClassifierUndersampled.csv  RandomForestClassifierUpSample.csv  RandomForestN36Entropy.csv  RandomForestWeigthed.csv  RandomForestWeigthed22.csv  RandomForestWeigthed500.csv  RandomForest_N10_Centropy.csv  RandomForest_N40_Centropy.csv  RandomForest_N46_Clog_loss.csv  RandomForest_N8_Centropy.csv  TreeClass5leaf.csv  (+12 more)
