[tool.poetry]
name = "ai5l-ailab-frauddetection"
version = "0.1.0"
description = ""
authors = ["NMI <nikola.mitrovic@spaceapplications.com>"]
readme = "README.md"
packages = [{include = "ai5l_ailab_frauddetection"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
torch = "^2.0.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
notebook = "^6.5.4"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
